# vi-tg

./: .gitignore  Cargo.toml  LICENSE  README.md  TELEGRAM_SETUP.md  api_contract.md  go.mod  go.sum  main.go  run.sh  run_backend.sh  run_frontend.sh
auth/: mtproto.go
backend/: server.go
config/: config.go
scripts/: generate_video_preview.sh  vi-tg.sh
src/: api.rs  app.rs  auth.rs  config.rs  main.rs  telegram.rs  ui.rs
telegram/: client.go
~/.config/fontconfig/: fonts.conf
~/.vi-tg/: config.json
