[package]
name = "vi-tg"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.27.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
futures = "0.3"
rust-tdlib = "0.4.3"
ratatui-image = "8.0.1"
image = "0.25.6"
hound = "3.5"  # Для чтения WAV файлов
ffmpeg-next = "7.1.0"  # Для анализа других аудио форматов
